// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Segment renders correctly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="om-react-ui-segment"
      >
        <div
          class="om-react-ui-segment-track"
          role="radiogroup"
        >
          <span
            class="om-react-ui-segment-indicator"
            style="width: 0px; transform: translateX(0px);"
          />
          <button
            aria-checked="true"
            class="om-react-ui-segment-item om-react-ui-segment-item-active"
            role="radio"
            tabindex="0"
            type="button"
          >
            <span
              class="om-react-ui-segment-item-label"
            >
              Tab 1
            </span>
          </button>
          <button
            aria-checked="false"
            class="om-react-ui-segment-item"
            role="radio"
            tabindex="-1"
            type="button"
          >
            <span
              class="om-react-ui-segment-item-label"
            >
              Tab 2
            </span>
          </button>
          <button
            aria-checked="false"
            class="om-react-ui-segment-item"
            role="radio"
            tabindex="-1"
            type="button"
          >
            <span
              class="om-react-ui-segment-item-label"
            >
              Tab 3
            </span>
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="om-react-ui-segment"
    >
      <div
        class="om-react-ui-segment-track"
        role="radiogroup"
      >
        <span
          class="om-react-ui-segment-indicator"
          style="width: 0px; transform: translateX(0px);"
        />
        <button
          aria-checked="true"
          class="om-react-ui-segment-item om-react-ui-segment-item-active"
          role="radio"
          tabindex="0"
          type="button"
        >
          <span
            class="om-react-ui-segment-item-label"
          >
            Tab 1
          </span>
        </button>
        <button
          aria-checked="false"
          class="om-react-ui-segment-item"
          role="radio"
          tabindex="-1"
          type="button"
        >
          <span
            class="om-react-ui-segment-item-label"
          >
            Tab 2
          </span>
        </button>
        <button
          aria-checked="false"
          class="om-react-ui-segment-item"
          role="radio"
          tabindex="-1"
          type="button"
        >
          <span
            class="om-react-ui-segment-item-label"
          >
            Tab 3
          </span>
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Segment renders with default value 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="om-react-ui-segment"
      >
        <div
          class="om-react-ui-segment-track"
          role="radiogroup"
        >
          <span
            class="om-react-ui-segment-indicator"
            style="width: 0px; transform: translateX(0px);"
          />
          <button
            aria-checked="false"
            class="om-react-ui-segment-item"
            role="radio"
            tabindex="-1"
            type="button"
          >
            <span
              class="om-react-ui-segment-item-label"
            >
              Tab 1
            </span>
          </button>
          <button
            aria-checked="true"
            class="om-react-ui-segment-item om-react-ui-segment-item-active"
            role="radio"
            tabindex="0"
            type="button"
          >
            <span
              class="om-react-ui-segment-item-label"
            >
              Tab 2
            </span>
          </button>
          <button
            aria-checked="false"
            class="om-react-ui-segment-item"
            role="radio"
            tabindex="-1"
            type="button"
          >
            <span
              class="om-react-ui-segment-item-label"
            >
              Tab 3
            </span>
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="om-react-ui-segment"
    >
      <div
        class="om-react-ui-segment-track"
        role="radiogroup"
      >
        <span
          class="om-react-ui-segment-indicator"
          style="width: 0px; transform: translateX(0px);"
        />
        <button
          aria-checked="false"
          class="om-react-ui-segment-item"
          role="radio"
          tabindex="-1"
          type="button"
        >
          <span
            class="om-react-ui-segment-item-label"
          >
            Tab 1
          </span>
        </button>
        <button
          aria-checked="true"
          class="om-react-ui-segment-item om-react-ui-segment-item-active"
          role="radio"
          tabindex="0"
          type="button"
        >
          <span
            class="om-react-ui-segment-item-label"
          >
            Tab 2
          </span>
        </button>
        <button
          aria-checked="false"
          class="om-react-ui-segment-item"
          role="radio"
          tabindex="-1"
          type="button"
        >
          <span
            class="om-react-ui-segment-item-label"
          >
            Tab 3
          </span>
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Segment renders with disabled item 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="om-react-ui-segment"
      >
        <div
          class="om-react-ui-segment-track"
          role="radiogroup"
        >
          <span
            class="om-react-ui-segment-indicator"
            style="width: 0px; transform: translateX(0px);"
          />
          <button
            aria-checked="true"
            class="om-react-ui-segment-item om-react-ui-segment-item-active"
            role="radio"
            tabindex="0"
            type="button"
          >
            <span
              class="om-react-ui-segment-item-label"
            >
              Tab 1
            </span>
          </button>
          <button
            aria-checked="false"
            aria-disabled="true"
            class="om-react-ui-segment-item om-react-ui-segment-item-disabled"
            role="radio"
            tabindex="-1"
            type="button"
          >
            <span
              class="om-react-ui-segment-item-label"
            >
              Tab 2
            </span>
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="om-react-ui-segment"
    >
      <div
        class="om-react-ui-segment-track"
        role="radiogroup"
      >
        <span
          class="om-react-ui-segment-indicator"
          style="width: 0px; transform: translateX(0px);"
        />
        <button
          aria-checked="true"
          class="om-react-ui-segment-item om-react-ui-segment-item-active"
          role="radio"
          tabindex="0"
          type="button"
        >
          <span
            class="om-react-ui-segment-item-label"
          >
            Tab 1
          </span>
        </button>
        <button
          aria-checked="false"
          aria-disabled="true"
          class="om-react-ui-segment-item om-react-ui-segment-item-disabled"
          role="radio"
          tabindex="-1"
          type="button"
        >
          <span
            class="om-react-ui-segment-item-label"
          >
            Tab 2
          </span>
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
